--- a/package.json
+++ b/package.json
@@ -1,64 +1,66 @@
 {
-  "name": "@arklabs/wallet-sdk",
-  "version": "0.0.1",
-  "description": "Bitcoin wallet SDK with Taproot and Ark integration",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "type": "module",
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": "23.3.0"
-  },
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "scripts": {
-    "build": "tsc",
-    "test": "vitest run",
-    "test:unit": "vitest run --exclude test/integration.test.ts",
-    "test:integration": "vitest run test/integration.test.ts",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "lint": "eslint \"src/**/*.ts\"",
-    "format": "prettier --write src",
-    "format:check": "prettier --check src",
-    "audit": "pnpm audit",
-    "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install",
-    "prepublishOnly": "pnpm run build",
-    "release": "bash scripts/release.sh",
-    "release:dry-run": "bash scripts/release.sh --dry-run",
-    "release:cleanup": "bash scripts/release.sh --cleanup"
-  },
-  "dependencies": {
-    "@noble/curves": "1.7.0",
-    "@noble/hashes": "1.6.1",
-    "@scure/base": "1.2.1",
-    "@scure/btc-signer": "1.5.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/node": "22.10.2",
-    "@typescript-eslint/eslint-plugin": "8.18.2",
-    "@typescript-eslint/parser": "8.18.2",
-    "@vitest/coverage-v8": "2.1.8",
-    "eslint": "^9.17.0",
-    "husky": "9.1.7",
-    "lint-staged": "15.3.0",
-    "prettier": "3.4.2",
-    "typescript": "5.7.2",
-    "vitest": "2.1.8"
-  },
-  "keywords": [
-    "bitcoin",
-    "wallet",
-    "taproot",
-    "ark",
-    "sdk"
-  ],
-  "author": "Ark Labs",
-  "license": "MIT"
+    "name": "@arklabs/wallet-sdk",
+    "version": "0.0.2",
+    "description": "Bitcoin wallet SDK with Taproot and Ark integration",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
+    "type": "module",
+    "files": [
+        "dist"
+    ],
+    "engines": {
+        "node": "23.3.0"
+    },
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
+    "scripts": {
+        "build": "tsc",
+        "test": "vitest run",
+        "test:unit": "vitest run --exclude test/integration.test.ts",
+        "test:setup": "node test/setup.js",
+        "test:integration": "vitest run test/integration.test.ts",
+        "test:watch": "vitest",
+        "test:coverage": "vitest run --coverage",
+        "lint": "eslint \"src/**/*.ts\"",
+        "format": "prettier --write src",
+        "format:check": "prettier --check src",
+        "audit": "pnpm audit",
+        "preinstall": "npx only-allow pnpm",
+        "prepare": "husky",
+        "prepublishOnly": "pnpm run build",
+        "release": "bash scripts/release.sh",
+        "release:dry-run": "bash scripts/release.sh --dry-run",
+        "release:cleanup": "bash scripts/release.sh --cleanup",
+        "precommit": "lint-staged"
+    },
+    "dependencies": {
+        "@noble/curves": "1.7.0",
+        "@noble/hashes": "1.6.1",
+        "@scure/base": "1.2.1",
+        "@scure/btc-signer": "1.5.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "@types/node": "22.10.2",
+        "@typescript-eslint/eslint-plugin": "8.18.2",
+        "@typescript-eslint/parser": "8.18.2",
+        "@vitest/coverage-v8": "2.1.8",
+        "eslint": "^9.17.0",
+        "husky": "9.1.7",
+        "lint-staged": "15.3.0",
+        "prettier": "3.4.2",
+        "typescript": "5.7.2",
+        "vitest": "2.1.8"
+    },
+    "keywords": [
+        "bitcoin",
+        "wallet",
+        "taproot",
+        "ark",
+        "sdk"
+    ],
+    "author": "Ark Labs",
+    "license": "MIT"
 }
