use pnpm in lintstaged

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-    "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
-    "*.{json,md}": ["prettier --write"]
+    "*.{js,jsx,ts,tsx}": ["pnpm eslint --fix", "pnpm prettier --write"],
+    "*.{json,md}": ["pnpm prettier --write"]
 }
