--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "@noble/curves": "1.7.0",
     "@noble/hashes": "1.6.1",
     "@scure/base": "1.2.1",
-    "@scure/btc-signer": "1.5.0"
+    "@scure/btc-signer": "1.5.0",
+    "bip68": "1.0.4",
+    "eventsource": "3.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/eventsource": "1.1.15",
     "@types/node": "22.10.2",
     "@typescript-eslint/eslint-plugin": "8.18.2",
     "@typescript-eslint/parser": "8.18.2",
