--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@cmdcode/musig2": "2.4.3",
     "@noble/curves": "1.7.0",
     "@noble/hashes": "1.6.1",
+    "@noble/secp256k1": "2.2.3",
     "@scure/base": "1.2.1",
     "@scure/btc-signer": "1.5.0",
     "bip68": "1.0.4",
