--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "1.2.0",
+    "@brandonblack/musig": "github:reardencode/musig-js",
     "@cmdcode/buff": "2.2.5",
     "@cmdcode/crypto-tools": "2.8.0",
     "@cmdcode/musig2": "2.4.3",
@@ -45,7 +47,8 @@
     "@scure/base": "1.2.1",
     "@scure/btc-signer": "1.5.0",
     "bip68": "1.0.4",
-    "eventsource": "3.0.2"
+    "eventsource": "3.0.2",
+    "tiny-secp256k1": "2.2.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
