update settle with new signing scheme

--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "test": "vitest run",
     "test:unit": "vitest run --exclude test/integration.test.ts",
     "test:setup": "node test/setup.js",
+    "test:setup-master": "node test/setup.js master",
+    "test:up-master": "docker compose -f docker-compose.yml up -d --build",
+    "test:down-master": "docker compose -f docker-compose.yml down",
     "test:integration": "vitest run test/integration.test.ts",
+    "test:integration-master": "ARK_ENV=master vitest run test/integration.test.ts",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "lint": "eslint \"src/**/*.ts\"",
