--- a/package.json
+++ b/package.json
@@ -45,12 +45,11 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "@brandonblack/musig": "github:reardencode/musig-js",
     "@noble/curves": "1.7.0",
     "@noble/hashes": "1.6.1",
     "@noble/secp256k1": "2.2.3",
     "@scure/base": "1.2.1",
-    "@scure/btc-signer": "1.5.0",
+    "@scure/btc-signer": "github:louisinger/scure-btc-signer",
     "bip68": "1.0.4"
   },
   "devDependencies": {
