--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "module": "commonjs",
         "outDir": "./dist/cjs",
-        "declaration": false
+        "declaration": false,
+        "declarationDir": null
     }
 } 
