--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "test:master": "ARK_ENV=master vitest run",
     "test:unit": "vitest run --exclude test/integration.test.ts",
     "test:setup": "node test/setup.js",
-    "test:setup-master": "node test/setup.js master",
-    "test:up-master": "docker compose -f docker-compose.yml up -d --build",
-    "test:down-master": "docker compose -f docker-compose.yml down",
+    "test:setup-docker": "node test/setup.js docker",
+    "test:up": "docker compose -f docker-compose.yml up -d --build",
+    "test:down": "docker compose -f docker-compose.yml down",
     "test:integration": "vitest run test/integration.test.ts",
-    "test:integration-master": "ARK_ENV=master vitest run test/integration.test.ts",
+    "test:integration-docker": "ARK_ENV=docker vitest run test/integration.test.ts",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:sw": "pnpm run build:browser && node test/serviceWorker/serve.js",
