fix: do not register/unregister SW if working in chrome extension

--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "bip68": "1.0.4"
   },
   "devDependencies": {
-    "rimraf": "^5.0.0",
     "@eslint/js": "^9.17.0",
+    "@types/chrome": "0.0.326",
     "@types/node": "22.10.2",
     "@typescript-eslint/eslint-plugin": "8.18.2",
     "@typescript-eslint/parser": "8.18.2",
@@ -72,6 +72,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.3.0",
     "prettier": "3.4.2",
+    "rimraf": "^5.0.0",
     "typescript": "5.7.2",
     "vitest": "2.1.9"
   },
