support recoverable vtxos

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test:unit": "vitest run --exclude test/integration.test.ts",
     "test:setup": "node test/setup.js",
     "test:setup-docker": "node test/setup.js docker",
-    "test:up-docker": "docker compose -f docker-compose.yml up -d --build",
+    "test:build-docker": "docker compose -f docker-compose.yml build --no-cache",
+    "test:up-docker": "docker compose -f docker-compose.yml up -d",
     "test:down-docker": "docker compose -f docker-compose.yml down",
     "test:integration": "vitest run test/integration.test.ts",
     "test:integration-docker": "ARK_ENV=docker vitest run test/integration.test.ts",
