Support recoverable vtxos (#88)
* support recoverable vtxos

* update ci.yml

* fixes

* update e2e test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,9 @@ jobs:
         use_liquid: false
         use_ln: false
 
+    - name: Build arkd master
+      run: pnpm run test:build-docker
+
     - name: Run arkd master
       run: pnpm run test:up-docker
 
