--- a/package.json
+++ b/package.json
@@ -58,12 +58,13 @@
     "@noble/secp256k1": "2.2.3",
     "@scure/base": "1.2.6",
     "@scure/btc-signer": "1.8.1",
-    "bip68": "1.0.4"
+    "bip68": "1.0.4",
+    "ws": "8.18.2"
   },
   "devDependencies": {
-    "rimraf": "^5.0.0",
     "@eslint/js": "^9.17.0",
     "@types/node": "22.10.2",
+    "@types/ws": "8.18.1",
     "@typescript-eslint/eslint-plugin": "8.18.2",
     "@typescript-eslint/parser": "8.18.2",
     "@vitest/coverage-v8": "2.1.9",
@@ -73,6 +74,7 @@
     "husky": "9.1.7",
     "lint-staged": "15.3.0",
     "prettier": "3.4.2",
+    "rimraf": "^5.0.0",
     "typescript": "5.7.2",
     "vitest": "2.1.9"
   },
