Uses built in WebSocket instead of isomorphic-ws Adds new stopFunc() in callback for notifyIncomingFunds New tests on the WebSocket

--- a/package.json
+++ b/package.json
@@ -58,8 +58,7 @@
     "@noble/secp256k1": "2.2.3",
     "@scure/base": "1.2.6",
     "@scure/btc-signer": "1.8.1",
-    "bip68": "1.0.4",
-    "isomorphic-ws": "5.0.0"
+    "bip68": "1.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
