add "arkade" keyword to pkg.json

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "wallet",
     "taproot",
     "ark",
-    "sdk"
+    "sdk",
+    "arkade"
   ],
   "author": "Ark Labs",
   "license": "MIT",
