--- a/.github/workflows/tsdoc.yml
+++ b/.github/workflows/tsdoc.yml
@@ -47,7 +47,7 @@ jobs:
           echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
     
       - name: Setup pnpm cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
@@ -69,12 +69,12 @@ jobs:
           fi
 
       - name: Build TSDoc
-        run: pnpm run docs:build
+        run: pnpm run docs:build && mv ./docs ./docs-temp
 
       - name: Create versioned directory structure
         run: |
           mkdir -p ${{ steps.version.outputs.path }}
-          cp -r ./docs/* ${{ steps.version.outputs.path }}/
+          cp -r ./docs-temp/* ${{ steps.version.outputs.path }}/
           
           # Create index.html that redirects to the latest version
           if [ "${{ github.event_name }}" = "release" ]; then
@@ -93,8 +93,8 @@ jobs:
           fi
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2 
+        uses: actions/deploy-pages@v4 
