--- a/.github/workflows/tsdoc.yml
+++ b/.github/workflows/tsdoc.yml
@@ -3,7 +3,8 @@ name: TSDoc Actions
 
 on:
   push:
-    branches: [ master, next-version ]
+    tags:
+      - 'v*'  # Triggers on version tags
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
