--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "prettier": "3.4.2",
     "typedoc": "^0.27.1",
     "typescript": "5.7.2",
-    "vitest": "2.1.9",
-    "ws": "8.18.3"
+    "vitest": "2.1.9"
   },
   "keywords": [
     "bitcoin",
