CI: run down to delete dev env

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,5 +72,9 @@ jobs:
           cat arkd.log
         fi
 
+    - name: Tear down arkd
+      run: pnpm run test:down-docker
+      if: always()
+
     - name: Check TypeScript compilation
       run: pnpm build 
