--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Capture arkd logs
       if: failure()
       run: |
-        docker logs $(docker ps -q --filter name=arkd) > arkd.log || true
+        docker logs arkd > arkd.log || true
         if [ -f arkd.log ]; then
           echo "=== arkd logs ==="
           cat arkd.log
