Add Expo-compatible providers for React Native integration
- Introduced ExpoArkProvider and ExpoIndexerProvider for handling streaming in Expo environments.
- Updated README.md with usage instructions for Expo/React Native.
- Modified package.json to include new adapter paths.
- Enhanced wallet configuration to support custom provider classes.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
             "import": "./dist/esm/index.js",
             "require": "./dist/cjs/index.js",
             "default": "./dist/esm/index.js"
+        },
+        "./adapters/expo": {
+            "types": "./dist/types/adapters/expo.d.ts",
+            "import": "./dist/esm/adapters/expo.js",
+            "require": "./dist/cjs/adapters/expo.js",
+            "default": "./dist/esm/adapters/expo.js"
         }
     },
     "files": [
