--- a/examples/expo-demo/package.json
+++ b/examples/expo-demo/package.json
@@ -16,6 +16,7 @@
         "@scure/bip39": "2.0.0",
         "expo": "~52.0.47",
         "expo-clipboard": "8.0.7",
+        "expo-crypto": "~14.0.2",
         "expo-fetch": "0.0.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
