fix: format Podfile.properties.json and update pnpm-lock.yaml with new dependencies

--- a/.npmrc
+++ b/.npmrc
@@ -3,4 +3,5 @@ strict-peer-dependencies=false
 auto-install-peers=true
 engine-strict=false
 save-exact=true
-node-version-tolerance=true 
+node-version-tolerance=true
+node-linker=hoisted 
