--- a/package.json
+++ b/package.json
@@ -96,8 +96,9 @@
         "@types/node": "24.3.1",
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.25.9",
-        "expo": "~52.0.47",
         "eventsource": "4.0.0",
+        "expo": "~52.0.47",
+        "fake-indexeddb": "6.2.5",
         "glob": "11.0.3",
         "husky": "9.1.7",
         "prettier": "3.6.2",
