--- a/package.json
+++ b/package.json
@@ -100,12 +100,12 @@
         "expo": "~52.0.47",
         "glob": "11.0.3",
         "husky": "9.1.7",
+        "indexeddbshim": "16.1.0",
         "prettier": "3.6.2",
         "rimraf": "^6.0.1",
         "typedoc": "^0.28.12",
         "typescript": "5.9.2",
-        "vitest": "3.2.4",
-        "indexeddbshim": "16.1.0"
+        "vitest": "3.2.4"
     },
     "keywords": [
         "bitcoin",
@@ -126,6 +126,10 @@
             "esbuild": ">=0.25.0",
             "brace-expansion": ">=2.0.2",
             "minimatch": "9.0.3"
-        }
+        },
+        "onlyBuiltDependencies": [
+            "canvas",
+            "sqlite3"
+        ]
     }
 }
