--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
         "test": "vitest run",
         "test:master": "ARK_ENV=master vitest run",
         "test:unit": "vitest run --exclude test/e2e",
-        "test:setup": "node test/setup.js",
-        "test:setup-docker": "node test/setup.js docker",
+        "test:setup": "node test/setup.mjs",
+        "regtest": "pnpm test:down-docker && pnpm test:build-docker && pnpm test:up-docker && pnpm test:setup-docker",
+        "test:setup-docker": "node test/setup.mjs docker",
         "test:build-docker": "docker compose -f docker-compose.yml build --no-cache",
         "test:up-docker": "docker compose -f docker-compose.yml up -d",
         "test:down-docker": "docker compose -f docker-compose.yml down",
