--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
         "lint": "prettier --check src test examples",
         "audit": "pnpm audit",
         "preinstall": "npx only-allow pnpm",
-        "prepare": "husky",
+        "prepare": "pnpm run build",
         "prepublishOnly": "pnpm run build",
         "release": "bash scripts/release.sh",
         "release:dry-run": "bash scripts/release.sh --dry-run",
