Revert "temporary build to allow feature branch"
This reverts commit d5676047a422bacb4078807b84045e55af422abf.

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
         "lint": "prettier --check src test examples",
         "audit": "pnpm audit",
         "preinstall": "npx only-allow pnpm",
-        "prepare": "pnpm run build",
+        "prepare": "husky",
         "prepublishOnly": "pnpm run build",
         "release": "bash scripts/release.sh",
         "release:dry-run": "bash scripts/release.sh --dry-run",
