--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ master, next-version ]
+    branches: [ master, next ]
   pull_request:
-    branches: [ master, next-version ]
+    branches: [ master, next ]
 
 jobs:
   test:
