--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
         "@noble/curves": "2.0.0",
         "@noble/secp256k1": "3.0.0",
         "@scure/base": "2.0.0",
+        "@scure/bip32": "^1.5.0",
+        "@scure/bip39": "^1.4.0",
         "@scure/btc-signer": "2.0.1",
         "bip68": "1.0.4",
         "@marcbachmann/cel-js": "7.0.0"
