--- a/package.json
+++ b/package.json
@@ -86,21 +86,21 @@
         "release:cleanup": "bash scripts/release.sh --cleanup"
     },
     "dependencies": {
+        "@marcbachmann/cel-js": "7.0.0",
         "@noble/curves": "2.0.0",
         "@noble/secp256k1": "3.0.0",
         "@scure/base": "2.0.0",
-        "@scure/bip32": "^1.5.0",
-        "@scure/bip39": "^1.4.0",
+        "@scure/bip32": "^2.0.0",
+        "@scure/bip39": "^2.0.0",
         "@scure/btc-signer": "2.0.1",
-        "bip68": "1.0.4",
-        "@marcbachmann/cel-js": "7.0.0"
+        "bip68": "1.0.4"
     },
     "devDependencies": {
         "@types/node": "24.3.1",
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.25.9",
-        "expo": "~52.0.47",
         "eventsource": "4.0.0",
+        "expo": "~52.0.47",
         "glob": "11.0.3",
         "husky": "9.1.7",
         "indexeddbshim": "16.1.0",
