--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
         "@noble/curves": "2.0.0",
         "@noble/secp256k1": "3.0.0",
         "@scure/base": "2.0.0",
-        "@scure/bip32": "^1.5.0",
-        "@scure/bip39": "^1.4.0",
+        "@scure/bip32": "^2.0.0",
+        "@scure/bip39": "^2.0.0",
         "@scure/btc-signer": "2.0.1",
         "bip68": "1.0.4"
     },
@@ -121,7 +121,7 @@
     ],
     "author": "Ark Labs",
     "license": "MIT",
-    "packageManager": "pnpm@10.20.0",
+    "packageManager": "pnpm@10.29.2+sha512.bef43fa759d91fd2da4b319a5a0d13ef7a45bb985a3d7342058470f9d2051a3ba8674e629672654686ef9443ad13a82da2beb9eeb3e0221c87b8154fff9d74b8",
     "engines": {
         "node": ">=20.0.0"
     },
