--- a/package.json
+++ b/package.json
@@ -86,24 +86,24 @@
         "release:cleanup": "bash scripts/release.sh --cleanup"
     },
     "dependencies": {
+        "@marcbachmann/cel-js": "7.3.1",
         "@noble/curves": "2.0.0",
         "@noble/secp256k1": "3.0.0",
         "@scure/base": "2.0.0",
         "@scure/btc-signer": "2.0.1",
-        "bip68": "1.0.4",
-        "@marcbachmann/cel-js": "7.0.0"
+        "bip68": "1.0.4"
     },
     "devDependencies": {
         "@types/node": "24.3.1",
         "@vitest/coverage-v8": "3.2.4",
-        "esbuild": "^0.25.9",
-        "expo": "~52.0.47",
+        "esbuild": "^0.27.3",
         "eventsource": "4.0.0",
-        "glob": "11.0.3",
+        "expo": "~52.0.49",
+        "glob": "11.1.0",
         "husky": "9.1.7",
         "prettier": "3.6.2",
-        "rimraf": "^6.0.1",
-        "typedoc": "^0.28.12",
+        "rimraf": "^6.1.2",
+        "typedoc": "^0.28.16",
         "typescript": "5.9.2",
         "vitest": "3.2.4"
     },
