refactor: use @kukks/bitcoin-descriptors for descriptor handling
Replace hand-rolled descriptor parsing with @kukks/bitcoin-descriptors
library (v3.1.0). Remove custom BIP32/ECPair adapter boilerplate now
that the library ships built-in adapters. Update docs to recommend
Seed/Mnemonic identity over SingleKey and clarify HD-readiness.

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     },
     "dependencies": {
         "@marcbachmann/cel-js": "7.3.1",
+        "@kukks/bitcoin-descriptors": "3.1.0",
         "@noble/curves": "2.0.0",
         "@noble/secp256k1": "3.0.0",
         "@scure/base": "2.0.0",
