--- a/package.json
+++ b/package.json
@@ -102,8 +102,6 @@
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.27.3",
         "eventsource": "4.0.0",
-        "expo": "~52.0.49",
-        "expo-sqlite": "16.0.10",
         "glob": "11.1.0",
         "husky": "9.1.7",
         "indexeddbshim": "16.1.0",
@@ -112,6 +110,22 @@
         "typedoc": "^0.28.16",
         "typescript": "5.9.2",
         "vitest": "3.2.4"
+    },
+    "peerDependencies": {
+        "indexeddbshim": ">=16.0.0",
+        "expo": ">=52.0.0",
+        "expo-sqlite": ">=16.0.0"
+    },
+    "peerDependenciesMeta": {
+        "indexeddbshim": {
+            "optional": true
+        },
+        "expo": {
+            "optional": true
+        },
+        "expo-sqlite": {
+            "optional": true
+        }
     },
     "keywords": [
         "bitcoin",
