--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
             "require": "./dist/cjs/adapters/expo.js",
             "default": "./dist/esm/adapters/expo.js"
         },
+        "./adapters/expo-db": {
+            "types": "./dist/types/adapters/expo-db.d.ts",
+            "import": "./dist/esm/adapters/expo-db.js",
+            "require": "./dist/cjs/adapters/expo-db.js",
+            "default": "./dist/esm/adapters/expo-db.js"
+        },
         "./adapters/localStorage": {
             "types": "./dist/types/adapters/localStorage.d.ts",
             "import": "./dist/esm/adapters/localStorage.js",
@@ -102,7 +108,6 @@
         "@vitest/coverage-v8": "3.2.4",
         "esbuild": "^0.27.3",
         "eventsource": "4.0.0",
-        "expo": "~52.0.49",
         "glob": "11.1.0",
         "husky": "9.1.7",
         "indexeddbshim": "16.1.0",
@@ -111,6 +116,22 @@
         "typedoc": "^0.28.16",
         "typescript": "5.9.2",
         "vitest": "3.2.4"
+    },
+    "peerDependencies": {
+        "indexeddbshim": ">=16.0.0",
+        "expo": ">=52.0.0",
+        "expo-sqlite": "~15.1.4"
+    },
+    "peerDependenciesMeta": {
+        "indexeddbshim": {
+            "optional": true
+        },
+        "expo": {
+            "optional": true
+        },
+        "expo-sqlite": {
+            "optional": true
+        }
     },
     "keywords": [
         "bitcoin",
