--- a/package.json
+++ b/package.json
@@ -136,7 +136,10 @@
     "peerDependencies": {
         "indexeddbshim": ">=16.0.0",
         "expo": ">=52.0.0",
-        "expo-sqlite": "~15.1.4"
+        "expo-sqlite": "~15.1.4",
+        "expo-background-task": ">=0.1.0",
+        "expo-task-manager": ">=12.0.0",
+        "@react-native-async-storage/async-storage": ">=1.0.0"
     },
     "peerDependenciesMeta": {
         "indexeddbshim": {
@@ -146,6 +149,15 @@
             "optional": true
         },
         "expo-sqlite": {
+            "optional": true
+        },
+        "expo-background-task": {
+            "optional": true
+        },
+        "expo-task-manager": {
+            "optional": true
+        },
+        "@react-native-async-storage/async-storage": {
             "optional": true
         }
     },
