--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,29 @@ services:
             - type: tmpfs
               target: /app/data
 
+    fulmine:
+        container_name: fulmine
+        depends_on:
+            - arkd
+        image: ghcr.io/arklabshq/fulmine:latest
+        restart: unless-stopped
+        environment:
+            - FULMINE_ARK_SERVER=arkd:7070
+            - FULMINE_ESPLORA_URL=http://chopsticks:3000
+            - FULMINE_NO_MACAROONS=true
+            - FULMINE_LOG_LEVEL=5
+            - FULMINE_DISABLE_TELEMETRY=true
+            - FULMINE_SWAP_TIMEOUT=120
+            - FULMINE_SCHEDULER_POLL_INTERVAL=10
+            - FULMINE_DELEGATOR_ENABLED=true
+        ports:
+            - "7000:7000"
+            - "7001:7001"
+            - "7002:7002"
+        volumes:
+            - type: tmpfs
+              target: /app/data
+
 networks:
     default:
         name: nigiri
