fix: pin brace-expansion to ^2.0.2 for Node.js v22 ESM compatibility
The >=2.0.2 override resolved to brace-expansion v4 which drops the
default export that minimatch@9.0.3 expects, breaking the build on
Node.js v22. Pinning to ^2.0.2 keeps it within the 2.x range.

--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "pnpm": {
         "overrides": {
             "esbuild": ">=0.25.0",
-            "brace-expansion": ">=2.0.2",
+            "brace-expansion": "^2.0.2",
             "minimatch": "9.0.3"
         }
     }
