feat: add SeedIdentity for HD wallet derivation (#269)
* feat: add SeedIdentity for HD wallet derivation from mnemonic/seed

Introduces SeedIdentity and ReadonlySeedIdentity classes that derive
keys using BIP86 (Taproot) paths. This enables users to transition
to HD wallets while maintaining current single-key behavior.

- SeedIdentity.fromMnemonic() with optional passphrase support
- SeedIdentity.fromSeed() for raw 64-byte seeds
- BIP86 derivation: m/86'/{0|1}'/0'/0/0 (mainnet/testnet)
- Descriptor format: tr([fingerprint/path']xpub.../0/*)
- Strict validation requiring /0/* template for HD compatibility
- JSON serialization with xpub validation on restore
- ReadonlySeedIdentity for watch-only functionality

* style: fix prettier formatting

* fix: use valid xpub format in test fixture

* docs: add docstrings to SeedIdentity and README documentation

* fix: update @scure/bip32 and @scure/bip39 to v2.0.0 for ESM compatibility

# Conflicts:
#	pnpm-lock.yaml

* refactor: use @kukks/bitcoin-descriptors for descriptor handling

Replace hand-rolled descriptor parsing with @kukks/bitcoin-descriptors
library (v3.1.0). Remove custom BIP32/ECPair adapter boilerplate now
that the library ships built-in adapters. Update docs to recommend
Seed/Mnemonic identity over SingleKey and clarify HD-readiness.

* feat: accept custom descriptor in SeedIdentityOptions

Use a discriminated union (NetworkOptions | DescriptorOptions) so
callers pass either `{ isMainnet }` or `{ descriptor }`, never both.
Export the option types from the SDK entry point.

* fix: update @scure/bip39 to v2.0.1 for ESM subpath exports

v2.0.0 was missing the package.json "exports" map, causing Vite's
resolver to reject the `@scure/bip39/wordlists/english` subpath
import in CI. v2.0.1 adds proper exports. Also use `.js` extension
in import to match the exports key.

* Update src/identity/seedIdentity.ts

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>
Signed-off-by: Andrew

--- a/package.json
+++ b/package.json
@@ -88,10 +88,13 @@
         "release:cleanup": "bash scripts/release.sh --cleanup"
     },
     "dependencies": {
+        "@kukks/bitcoin-descriptors": "3.1.0",
         "@marcbachmann/cel-js": "7.3.1",
         "@noble/curves": "2.0.0",
         "@noble/secp256k1": "3.0.0",
         "@scure/base": "2.0.0",
+        "@scure/bip32": "2.0.0",
+        "@scure/bip39": "2.0.1",
         "@scure/btc-signer": "2.0.1",
         "bip68": "1.0.4"
     },
@@ -119,14 +122,14 @@
     ],
     "author": "Ark Labs",
     "license": "MIT",
-    "packageManager": "pnpm@10.20.0",
+    "packageManager": "pnpm@10.29.2+sha512.bef43fa759d91fd2da4b319a5a0d13ef7a45bb985a3d7342058470f9d2051a3ba8674e629672654686ef9443ad13a82da2beb9eeb3e0221c87b8154fff9d74b8",
     "engines": {
         "node": ">=20.0.0"
     },
     "pnpm": {
         "overrides": {
             "esbuild": ">=0.25.0",
-            "brace-expansion": ">=2.0.2",
+            "brace-expansion": "^2.0.2",
             "minimatch": "9.0.3"
         }
     }
