--- a/package.json
+++ b/package.json
@@ -135,10 +135,10 @@
     },
     "peerDependencies": {
         "indexeddbshim": ">=16.0.0",
-        "expo": ">=52.0.0",
-        "expo-sqlite": "~15.1.4",
-        "expo-background-task": ">=0.2.5",
-        "expo-task-manager": ">=12.0.0",
+        "expo": ">=54.0.0",
+        "expo-sqlite": "~16.0.10",
+        "expo-background-task": "~1.0.10",
+        "expo-task-manager": "~14.0.9",
         "@react-native-async-storage/async-storage": ">=1.0.0"
     },
     "peerDependenciesMeta": {
