feat: add @arkade-os/sdk/adapters/sqlite entry point

--- a/package.json
+++ b/package.json
@@ -53,6 +53,12 @@
             "require": "./dist/cjs/adapters/asyncStorage.js",
             "default": "./dist/esm/adapters/asyncStorage.js"
         },
+        "./adapters/sqlite": {
+            "types": "./dist/types/adapters/sqlite.d.ts",
+            "import": "./dist/esm/adapters/sqlite.js",
+            "require": "./dist/cjs/adapters/sqlite.js",
+            "default": "./dist/esm/adapters/sqlite.js"
+        },
         "./worker/expo": {
             "types": "./dist/types/worker/expo/index.d.ts",
             "import": "./dist/esm/worker/expo/index.js",
